--- a/styles/chmduquesne.tex
+++ b/styles/chmduquesne.tex
@@ -17,7 +17,9 @@ $endif$
 \setupcolor[hex]
 \definecolor[titlegrey][h=757575]
 \definecolor[sectioncolor][h=397249]
+% \definecolor[sectioncolor][h=0037ac]
 \definecolor[rulecolor][h=9cb770]
+% \definecolor[rulecolor][h=4883ff]
 
 % Enable hyperlinks
 \setupinteraction[state=start, color=sectioncolor]
@@ -25,16 +27,16 @@ $endif$
 \setuppapersize [$if(papersize)$$papersize$$else$letter$endif$][$if(papersize)$$papersize$$else$letter$endif$]
 \setuplayout    [width=middle, height=middle,
                  backspace=20mm, cutspace=0mm,
-                 topspace=10mm, bottomspace=20mm,
+                 topspace=5mm, bottomspace=5mm,
                  header=0mm, footer=0mm]
 
 %\setuppagenumbering[location={footer,center}]
 
-\setupbodyfont[11pt, helvetica]
+\setupbodyfont[10.6pt, helvetica]
 
 \setupwhitespace[medium]
 
-\setupblackrules[width=31mm, color=rulecolor]
+\setupblackrules[width=15mm, color=rulecolor]
 
 \setuphead[chapter]      [style=\tfd]
 \setuphead[section]      [style=\tfd\bf, color=titlegrey, align=middle]
@@ -52,13 +54,10 @@ $endif$
 \definedescription
   [description]
   [headstyle=bold, style=normal,
-   location=hanging, width=18mm, distance=14mm, margin=0cm]
+   location=hanging, width=22mm, distance=14mm, margin=0cm]
 
 \setupitemize[autointro, packed]    % prevent orphan list intro
 \setupitemize[indentnext=no]
-
-\defineitemgroup[enumerate]
-\setupenumerate[each][fit][itemalign=left,distance=.5em,style={\feature[+][default:tnum]}]
 
 \setupfloat[figure][default={here,nonumber}]
 \setupfloat[table][default={here,nonumber}]
