added susi's resume

--- a/styles/chmduquesne.tex
+++ b/styles/chmduquesne.tex
@@ -16,10 +16,13 @@ $endif$
 
 \setupcolor[hex]
 \definecolor[titlegrey][h=757575]
-\definecolor[sectioncolor][h=397249]
+\definecolor[titlegrey][h=008B8B]
+% \definecolor[sectioncolor][h=397249]
 % \definecolor[sectioncolor][h=0037ac]
-\definecolor[rulecolor][h=9cb770]
-% \definecolor[rulecolor][h=4883ff]
+\definecolor[sectioncolor][h=008B8B]
+%\definecolor[rulecolor][h=9cb770]
+%\definecolor[rulecolor][h=4883ff]
+\definecolor[rulecolor][h=48D1CC]
 
 % Enable hyperlinks
 \setupinteraction[state=start, color=sectioncolor]
@@ -54,7 +57,7 @@ $endif$
 \definedescription
   [description]
   [headstyle=bold, style=normal,
-   location=hanging, width=22mm, distance=14mm, margin=0cm]
+   location=hanging, width=22mm, distance=12mm, margin=0cm]
 
 \setupitemize[autointro, packed]    % prevent orphan list intro
 \setupitemize[indentnext=no]
